# FamgyElfHook

./: settings.gradle
app/: CMakeLists.txt  build.gradle
app/release/: app-release.apk
app/src/androidTest/java/com/famgy/famgyelfhook/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/famgy/famgyelfhook/: MainActivity.java
app/src/main/java/com/famgy/xhooktest/: NativeHandler.java  XHookTest.java
app/src/main/jni/xhooktest/: CMakeLists.txt  xhooktest.c
app/src/main/res/values/: strings.xml
app/src/test/java/com/famgy/famgyelfhook/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
xhook/: CMakeLists.txt  build.gradle
xhook/src/androidTest/java/com/famgy/xhook/: ExampleInstrumentedTest.java
xhook/src/main/: AndroidManifest.xml
xhook/src/main/java/com/famgy/xhook/: NativeHandler.java  XHook.java
xhook/src/main/java/com/famgy/xhookapply/: NativeHandler.java  XHookApply.java
xhook/src/main/jni/xhook/: xh_jni.c
xhook/src/main/jni/xhookapply/: xhookapply.c
xhook/src/test/java/com/famgy/xhook/: ExampleUnitTest.java
